The march of progress

--- a/app/assets/stylesheets/goalsets.css.sass
+++ b/app/assets/stylesheets/goalsets.css.sass
@@ -1,14 +1,23 @@
+
 .goalset-container
-  color: #393c3d
-  border: 1px solid #c8c8c8
-  border-color: rgba(0,0,0,0.2)
-  -webkit-border-radius: 5px
-  padding: 1em
+	color: #393c3d
+	border: 1px solid #c8c8c8
+	border-color: rgba(0,0,0,0.2)
+	-webkit-border-radius: 5px
+	padding: 1em
+	margin: 0.5em
+	list-style: none
+
+.new-goalset-container
+	width: 500px
+	form
+		input
+			display:inline-block
 
 .task-list
-  list-style: none
+	list-style: none
 
 .border-right
-  border-right: 1px solid #dddddd
+	border-right: 1px solid #dddddd
 .goalset-list-item
-  padding: 1em
+	padding: 1em
