--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,13 @@
     </nav>
   </div>
   <body>
+    <div class="row new-goalset-container">
+      <form ng-submit="addGoalset()">
+        <input type="text" ng-model="newGoalset.title">
+        <input type="submit" value="Add">
+      </form>
+    </div>
+    <hr/>
     <div ng-view>
       <%= yield %>
     </div>
