--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,7 @@
       </form>
     </div>
     <hr/>
-    <div ng-view>
-      <%= yield %>
-    </div>
+    <div ui-view></div>
+
   </body>
 </html>
